# cw-api

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  app.py  docker-compose.yml  package-lock.json  pyproject.toml  pytest.ini  test_endpoint.py  wait-for-db.sh
data_access/: check_db_connection.py  main.py
data_access/db/initdb/: init.sql
data_aggregation/: aggregator.py
data_aggregation/test_data/: aggregated_summary.json  cardwatch_food_transaction.json
data_collection/: collector.py
db/: populate_sample_data.sql
db/initdb/: init.sql
frontend/: .dockerignore  Dockerfile  README.md  api.js  env-config.js  index.html  main.js  nginx.conf  package-lock.json  package.json  schedule-reports.js  style.css  vite.config.js
js/: convert-to-pdf.js  generate-html-report.js  package.json  pdf-generator.js  simplified-pdf.js  verify-puppeteer.js
js/templates/: report-template.html
prompting/: prompt.py
prompting/templates/: old_format.txt  response_format.json
report_generation/: mock_report_data.json  report.py
reports/: report_index.json
routes/: routes.py
services/: aggregator.py  chat_service.py  dashboard_service.py  js_bridge_service.py  prompt.py  report.py  report_service.py  report_storage.py
services/templates/: old_format.txt
services/test_data/: cardwatch_food_transaction.json
tests/: test_api.py  test_collector.py  test_generate_pdf_report_logic.py  test_prompt_function.py
utils/: utils.py
