[project]
name = "cardwatch-reporting-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-ai-inference>=1.0.0b6",
    "flask>=3.1.0",
    "fpdf>=1.7.2",
    "openai>=1.58.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "pytest>=7.4.2",
    "flask-cors>=5.0.0",
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
    "plotly>=6.0.0",
    "reportlab>=4.3.1",
    "weasyprint>=64.1",
    "pdfkit>=1.0.0",
    "xhtml2pdf>=0.2.11",
    "psycopg2-binary>=2.9.9",
]
